syntax = "proto2";

package rv.protos;

import "rastervision/protos/task.proto";
import "rastervision/protos/backend.proto";
import "rastervision/protos/scene2.proto";

message ChipCommandConfig {
    required TaskConfig task = 1;
    required BackendConfig backend = 2;
    repeated SceneConfig train_scenes = 3;
    repeated SceneConfig val_scenes = 4;
}
